--- a/gb/22/3/28/n13678637.md
+++ b/gb/22/3/28/n13678637.md
@@ -150,7 +150,7 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/10/n10045158.md#1" target="_blank">《苦菜花》人物原型的真实人生（1）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/14/4/12/n4130061.md#1" target="_blank">正清：法轮功没有“男女双修”</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/10/23/n9759878.md#1" target="_blank">钟革：朱毛红军使国人成人血馒头（七）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/1/10/n11782021.md#1" target="_blank">读《转法轮》澳洲西人找到生命意义</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
