--- a/gb/22/3/28/n13678637.md
+++ b/gb/22/3/28/n13678637.md
@@ -150,7 +150,7 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/11/n11180163.md#1" target="_blank">【征文】章阁：中国古代专制吗（下）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/25/n10932219.md#1" target="_blank">褒奖法轮功 推崇普世价值</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/16/n11262822.md#1" target="_blank">【征文】兰音：传统社会中妻子的真实地位</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/2/5/n11026306.md#1" target="_blank">冰天雪地 瑞典法轮功学员传真相 感动民众</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
