--- a/gb/22/3/28/n13678637.md
+++ b/gb/22/3/28/n13678637.md
@@ -150,7 +150,7 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/4/17/n10311201.md#1" target="_blank">心升：以史为镜看毛邪（下）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/12/9/27/n3693107.md#1" target="_blank">一诺：中共假“关爱”之名对青少年的洗脑迫害</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/4/7/n10283458.md#1" target="_blank">李庆霖“知青英雄”悲剧是如何造成的(上)</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/30/n10441048.md#1" target="_blank">西人学炼法轮功 生活发生深刻变化</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
